--- a/quizy/quizprawa.html
+++ b/quizy/quizprawa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Angielski</title>
+    <title>Quiz Prawa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
         
         <!-- Ekran startowy -->
         <div id="start-screen">
-            <h1 class="text-3xl md:text-4xl font-bold text-center text-indigo-600 dark:text-indigo-400 mb-4">Quiz z Angielskiego</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-center text-indigo-600 dark:text-indigo-400 mb-4">Quiz Prawa</h1>
             <p class="text-center text-slate-600 dark:text-slate-400 mb-8">Sprawdź swoją wiedzę! Quiz składa się z 40 losowych pytań. Kliknij przycisk poniżej, aby rozpocząć.</p>
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
                 <button id="start-btn" class="w-full sm:w-auto bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-200 transform hover:scale-105">
