--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                 
                  <!-- Karta Materiałów: IT -->
-                <a href="materialy/materialit.html" class="card block bg-slate-50 dark:bg-slate-700 p-6 rounded-xl text-center">
+                <a href="https://docs.google.com/document/d/1PfUUllHgwX-LLM8sLMo86UkjcSn4bvYQWSVGtBUnFNI/edit?usp=sharing" target="_blank" class="card block bg-slate-50 dark:bg-slate-700 p-6 rounded-xl text-center">
                     <i class="fas fa-book-reader text-4xl text-indigo-500 mb-4"></i>
                     <h3 class="font-bold text-xl mb-2">Materiały IT</h3>
                     <p class="text-sm text-slate-600 dark:text-slate-400">Notatki, artykuły i opracowania z dziedziny IT.</p>
                 </a>
 
                 <!-- Karta Materiałów: Prawo -->
-                <a href="materialy/materialprawo.html" class="card block bg-slate-50 dark:bg-slate-700 p-6 rounded-xl text-center">
+                <a href="https://docs.google.com/document/d/1EobcMn1OhtaLkvOxq6Mk5pTeNx9uMyhwsegc_ZdhOnY/edit?usp=sharing" target="_blank" class="card block bg-slate-50 dark:bg-slate-700 p-6 rounded-xl text-center">
                     <i class="fas fa-scroll text-4xl text-indigo-500 mb-4"></i>
                     <h3 class="font-bold text-xl mb-2">Materiały z Prawa</h3>
                     <p class="text-sm text-slate-600 dark:text-slate-400">Opracowania ustaw, kazusy i artykuły prawne.</p>
