--- a/quizy/quizprawa.html
+++ b/quizy/quizprawa.html
@@ -44,7 +44,7 @@
         
         <!-- Ekran startowy -->
         <div id="start-screen">
-            <h1 class="text-3xl md:text-4xl font-bold text-center text-indigo-600 dark:text-indigo-400 mb-4">Quiz z Angielskiego</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-center text-indigo-600 dark:text-indigo-400 mb-4">Quiz z Praw</h1>
             <p class="text-center text-slate-600 dark:text-slate-400 mb-8">Sprawdź swoją wiedzę! Quiz składa się z 40 losowych pytań. Kliknij przycisk poniżej, aby rozpocząć.</p>
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
                 <button id="start-btn" class="w-full sm:w-auto bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition-transform duration-200 transform hover:scale-105">
@@ -265,4 +265,5 @@
     </script>
 </body>
 </html>
+
 
